<resources>
    <string name="app_name">SQLite Weather</string>

    <string name="forecast_for">Forecast for</string>
    <string name="loading_error_message">Woops.  We couldn\'t load your data.  Check your internet connection, and try again.</string>

    <string name="action_share">Share forecast</string>
    <string name="action_location">Show forecast location</string>
    <string name="action_settings">Settings</string>
    <string name="share_chooser_title">Pick an app to share this forecast</string>

    <string name="forecast_item_details">%1$d%2$s - %3$s</string>
    <string name="forecast_item_low_high_temp">Low: %1$d%3$s   High: %2$d%3$s</string>
    <string name="forecast_item_wind">Wind: %1$d MPH %2$s</string>
    <string name="forecast_item_humidity">Humidity: %1$d%%</string>
    <string name="forecast_item_share_text">Forecast for %1$s, %2$s: %3$d%4$s - %5$s #CS492Weather</string>

    <!-- Strings for units pref -->
    <string name="pref_units_key" translatable="false">pref_units</string>
    <string name="pref_units_title">Weather units</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_kelvin">Kelvin</string>
    <string name="pref_units_imperial_value" translatable="false">imperial</string>
    <string name="pref_units_metric_value" translatable="false">metric</string>
    <string name="pref_units_kelvin_value" translatable="false"></string>
    <string name="pref_units_default_value" translatable="false">@string/pref_units_imperial_value</string>

    <string name="units_imperial">F</string>
    <string name="units_metric">C</string>
    <string name="units_kelvin">K</string>

    <!-- Strings for location pref -->
    <string name="pref_location_key" translatable="false">pref_location</string>
    <string name="pref_location_title">Weather location</string>
    <string name="pref_location_default_value">Corvallis, OR, US</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>

    <string name="action_fav_title">Favorite</string>
    <string name="planets_title">Planets</string>
    <string name="people_title">People</string>
    <string name="films_title">Films</string>
    <string name="species_title">Species</string>
    <string name="starships_title">Starships</string>
    <string name="vehicles_title">Vehicles</string>
</resources>
